--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,126 @@
-
+absl-py==2.1.0
+altair==5.3.0
+asgiref==3.8.1
+asttokens==2.4.1
+attrs==23.2.0
+bcrypt==4.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
 configparser==7.0.0
+contourpy==1.2.1
+cryptography==43.0.0
+cycler==0.12.1
 debugpy==1.8.1
+decorator==5.1.1
 Django==5.0.6
 django-cors-headers==4.4.0
+django-sql-dashboard==0.1a2
 djangorestframework==3.15.2
-
+et-xmlfile==1.1.0
+executing==2.0.1
+flatbuffers==24.3.25
+fonttools==4.52.1
 gitdb==4.0.11
-gunicorn
-
+GitPython==3.1.43
+googlemaps==4.10.0
+greenlet==3.0.3
+idna==3.7
+ipykernel==6.29.4
 ipython==8.24.0
+jax==0.4.30
 jaxlib==0.4.30
+jedi==0.19.1
+Jinja2==3.1.4
 joblib==1.4.2
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+kaleido==0.2.1
+kiwisolver==1.4.5
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.0
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mediapipe==0.10.14
+ml-dtypes==0.4.0
+MouseInfo==0.1.3
+mysql==0.0.3
+mysql-connector-python==9.0.0
+mysqlclient==2.2.4
+nest-asyncio==1.6.0
 numpy==1.26.4
 opencv-contrib-python==4.10.0.84
 opencv-python==4.10.0.84
+openpyxl==3.1.5
+opt-einsum==3.3.0
+packaging==24.0
 pandas==2.2.2
+paramiko==3.4.1
 parso==0.8.4
+pillow==10.3.0
+platformdirs==4.2.1
 plotly==5.22.0
-whitenoise[brotli]
-
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+psutil==5.9.8
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pure-eval==0.2.2
+pyarrow==16.1.0
+PyAutoGUI==0.9.54
+pycparser==2.22
+pydeck==0.9.1
+PyGetWindow==0.0.9
+Pygments==2.18.0
+PyMsgBox==1.0.9
+PyMySQL==1.1.1
+PyNaCl==1.5.0
 pyparsing==3.1.2
-
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==0.1.30
 python-dateutil==2.9.0.post0
-
+python-dotenv==1.0.1
+pytweening==1.2.0
+pytz==2024.1
+pywin32==306
+pyzmq==26.0.3
+referencing==0.35.1
 requests==2.31.0
-psycopg2
 scikit-learn==1.5.1
 scipy==1.13.1
-
-
+seaborn==0.13.2
+setuptools==69.5.1
+six==1.16.0
+smmap==5.0.1
+sounddevice==0.4.7
+soupsieve==2.5
+SQLAlchemy==2.0.32
+sqlparse==0.5.0
+stack-data==0.6.3
+streamlit==1.35.0
+tenacity==8.3.0
+threadpoolctl==3.5.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
+traitlets==5.14.3
+typing_extensions==4.12.0
+tzdata==2024.1
+urllib3==2.2.1
+watchdog==4.0.1
+wcwidth==0.2.13
+webencodings==0.5.1
+wheel==0.43.0
 whitenoise==6.7.0
